# easyhttpcpp

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  appveyor.yml  rocro.yml
samples/: CMakeLists.txt  README.md
samples/AsyncHttpClient/: AsyncHttpClient.cpp  CMakeLists.txt
samples/SimpleHttpClient/: CMakeLists.txt  SimpleHttpClient.cpp
tests/: CMakeLists-integrationtests.txt  CMakeLists-unittests.txt  CMakeLists.txt
tests/Data/HttpIntegrationTest/01_cache_from_db/HttpCache/cache/: cache_metadata.db
tests/Data/HttpIntegrationTest/01_cache_from_db/HttpCache/windows/cache/: cache_metadata.db
tests/Data/HttpIntegrationTest/02_https_localhost_cert/cert/client/: localhost_rootCa.pem  localhost_rootCa_invalid_common.pem
tests/Data/HttpIntegrationTest/02_https_localhost_cert/cert/client/rootCa/: 2eec780c.0  c37db6da.0
tests/Data/HttpIntegrationTest/02_https_localhost_cert/cert/client/rootCa-invalid-common/: 64b0d652.0
tests/Data/HttpIntegrationTest/03_https_localhost_cert_expired/cert/client/rootCa/: 2eec780c.0
tests/Data/HttpIntegrationTest/03_https_localhost_cert_expired/cert/server/: server.pem  server.pfx
tests/integrationtests/: CallExceptGetMethodIntegrationTest.cpp  CallExecuteAsyncIntegrationTest.cpp  CallWithCacheAfterSendRequestIntegrationTest.cpp  CallWithCacheBeforeSendRequestIntegrationTest.cpp  CallWithCacheManageIntegrationTest.cpp  CallWithCancelIntegrationTest.cpp  CallWithConnectionPoolAndCancelIntegrationTest.cpp  CallWithDatabaseCorruptionIntegrationTest.cpp  CallWithGetMethodIntegrationTest.cpp  CallWithHttpsIntegrationTest.cpp  CallWithInterceptorIntegrationTest.cpp  CallWithMultiThreadIntegrationTest.cpp  CallWithRedirectIntegrationTest.cpp  CallWithRetryByConnectionPoolIntegrationTest.cpp  CallWithoutConnectionPoolIntegrationTest.cpp  ConnectionConfirmationInterceptor.cpp  ConnectionConfirmationInterceptor.h  ConnectionPoolInternalIntegrationTest.cpp  ConnectionPoolInternalMultiThreadIntegrationTest.cpp  EasyHttpIntegrationTest.cpp  HttpCacheDatabaseCorruptionIntegrationTest.cpp  HttpCacheDatabaseIntegrationTest.cpp  HttpCacheIntegrationTest.cpp  HttpFileCacheDatabaseCorruptionIntegrationTest.cpp  HttpFileCacheIntegrationTest.cpp  HttpFileCacheWithMultiThreadIntegrationTest.cpp  HttpIntegrationTestCase.h  HttpTestBaseRequestHandler.cpp  HttpTestBaseRequestHandler.h  HttpTestCommonRequestHandler.cpp  HttpTestCommonRequestHandler.h  HttpTestConstants.cpp  HttpTestConstants.h  HttpTestResponseCallback.cpp  HttpTestResponseCallback.h  HttpTestUtil.cpp  HttpTestUtil.h  MockHttpCacheEnumerationListener.h  ResponseBodyStreamFromCacheIntegrationTest.cpp  ResponseBodyStreamWithCachingIntegrationTest.cpp  (+6 more)
tests/integrationtests/db/: SqliteCursorIntegrationTest.cpp  SqliteDatabaseCorruptionIntegrationTest.cpp  SqliteDatabaseIntegrationTest.cpp  SqliteDatabaseIntegrationTestConstants.cpp  SqliteDatabaseIntegrationTestConstants.h  SqliteDatabaseTestUtil.cpp  SqliteDatabaseTestUtil.h  SqliteIntegrationTest.cpp  SqliteOpenHelperIntegrationTest.cpp
tests/integrationtests/executorservice/: FutureTaskIntegrationTest.cpp  QueuedThreadPoolIntegrationTest.cpp  ScheduledFutureTaskIntegrationTest.cpp
tests/testutil/: EasyHttpCppAssertions.h  ExceptionTestUtil.h  FileContentsEqualMatcher.cpp  FileContentsEqualMatcher.h  ForwardingMockSqliteDatabase.h  HeaderContainMatcher.cpp  HeaderContainMatcher.h  HeadersEqualMatcher.cpp  HeadersEqualMatcher.h  HttpTestRequestHandlerFactory.cpp  HttpTestRequestHandlerFactory.h  HttpTestServer.cpp  HttpTestServer.h  HttpsTestServer.cpp  HttpsTestServer.h  MockCache.h  MockCacheStrategyListener.h  MockFuture.h  MockHttpCache.h  MockInterceptor.h  MockRequest.h  MockResponseBodyStream.h  PartialMockFutureTask.h  PartialMockScheduledFutureTask.h  PartialMockSqliteOpenHelper.h  RandomUtil.cpp  RandomUtil.h  StdCLogCapture.cpp  StdCLogCapture.h  TestConstants.cpp  TestConstants.h  TestDatabaseUtil.cpp  TestDatabaseUtil.h  TestDefs.h  TestFileUtil.cpp  TestFileUtil.h  TestLogger.cpp  TestLogger.h  TestPreferences.cpp  TestPreferences.h  (+4 more)
tests/testutil/unix/: TestFileUtilImpl.cpp  TestFileUtilImpl.h
tests/testutil/windows/: TestFileUtilImpl.cpp  TestFileUtilImpl.h
tests/unittests/: CacheControlUnitTest.cpp  CallInternalUnitTest.cpp  ConnectionInternalSetInuseParameterUnitTest.cpp  ConnectionInternalUnitTest.cpp  ConnectionPoolInternalUnitTest.cpp  ConnectionPoolUnitTest.cpp  EasyHttpContextUnitTest.cpp  EasyHttpInternalUnitTest.cpp  EasyHttpUnitTest.cpp  HeadersUnitTest.cpp  HttpCacheDatabaseUnitTest.cpp  HttpCacheInfoUnitTest.cpp  HttpCacheInternalUnitTest.cpp  HttpCacheStrategyFunctionUnitTest.cpp  HttpCacheStrategyUnitTest.cpp  HttpCacheUnitTest.cpp  HttpEngineUnitTest.cpp  HttpLruCacheStrategyUnitTest.cpp  HttpUtilUnitTest.cpp  HttpsExceptionUnitTest.cpp  KeepAliveTimeoutTaskUnitTest.cpp  MediaTypeUnitTest.cpp  MockConnectionPoolInternal.h  MockConnectionStatusListener.h  MockKeepAliveTimeoutListener.h  RequestBodyForByteBufferUnitTest.cpp  RequestBodyForSharedPtrByteBufferUnitTest.cpp  RequestBodyForSharedPtrStreamUnitTest.cpp  RequestBodyForSharedPtrStringUnitTest.cpp  RequestBodyForStreamUnitTest.cpp  RequestBodyForStringUnitTest.cpp  RequestBodyUnitTest.cpp  RequestUnitTest.cpp  ResponseBodyUnitTest.cpp  ResponseUnitTest.cpp
tests/unittests/common/: BaseLoggerUnitTest.cpp  ByteArrayBufferUnitTest.cpp  CacheInfoWithDataSizeUnitTest.cpp  CacheManagerMultiThreadUnitTest.cpp  CacheManagerUnitTest.cpp  CommonExceptionUnitTest.cpp  CoreLoggerUnitTest.cpp  DefaultLogWriterUnitTest.cpp  FileUtilMultiThreadUnitTest.cpp  FileUtilUnitTest.cpp  LruCacheByDataSizeStrategyUnitTest.cpp  ProjectVersionUnitTest.cpp  StringUtilTest.cpp
tests/unittests/db/: ContentValuesUnitTest.cpp  SqlExceptionUnitTest.cpp  SqliteQueryBuilderUnitTest.cpp
tests/unittests/executorservice/: BlockingQueueUnitTest.cpp  FutureTaskTypeParameterizedUnitTest.cpp  QueuedThreadPoolUnitTest.cpp
tests/unittests/messagedigest/: DigestUtilUnitTest.cpp  MessageDigestExceptionUnitTest.cpp
(+235 files in other folders)
